metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/MIIncident__c.field-meta.xml
<CustomField>
    <fullName>MIIncident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the MI Incident that initiated the Tack Survey record and subsequent response.</description>
    <label>MI Incident</label>
    <referenceTo>MIIncident__c</referenceTo>
    <relationshipLabel>Tack Surveys</relationshipLabel>
    <relationshipName>TackSurveys</relationshipName>
    <type>Lookup</type>
</CustomField>