metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/MIIncidentCategory__c.field-meta.xml
<CustomField>
    <fullName>MIIncidentCategory__c</fullName>
    <description>Stamp of the MI Incident category that initiated theTack Survey offer.</description>
    <label>MI Incident Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>