metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/MIIncidentOutcome__c.field-meta.xml
<CustomField>
    <fullName>MIIncidentOutcome__c</fullName>
    <description>The stamp of the MI Incident Outcome (pro or customer) that initiated the Tack Survey offer.</description>
    <label>MI Incident Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>