metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/MIIncidentSubcategory__c.field-meta.xml
<CustomField>
    <fullName>MIIncidentSubcategory__c</fullName>
    <description>The stamp of the MI Incident subcategory that initiated the CSAT offer.</description>
    <label>MI Incident Subcategory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>