metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/Numberofinteractionstoresolution__c.field-meta.xml
<CustomField>
    <fullName>Numberofinteractionstoresolution__c</fullName>
    <description>How many times did you interact with our customer support team before your issue was resolved?</description>
    <inlineHelpText>How many times did you interact with our customer support team before your issue was resolved?</inlineHelpText>
    <label>Number of interactions to resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4+</fullName>
            </value>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>More than one</fullName>
            </value>
            <value>
                <fullName>Issue is not resolved</fullName>
            </value>
            <value>
                <fullName>4 or more</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>