metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/Offer_Status__c.field-meta.xml
<CustomField>
    <fullName>Offer_Status__c</fullName>
    <description>Picklist of values to indicate the status of the survey offering.</description>
    <label>Offer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <color>#0B6FCE</color>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Offered</fullName>
                <color>#33CC00</color>
                <label>Offered</label>
            </value>
            <value>
                <fullName>Responded</fullName>
                <color>#FF9900</color>
                <label>Responded</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>