metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/OfferDate__c.field-meta.xml
<CustomField>
    <fullName>OfferDate__c</fullName>
    <description>Date/time of when the email alert was sent to the Contact offering the survey.</description>
    <label>Offer Date</label>
    <type>DateTime</type>
</CustomField>