metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/OfferDateDateOnly__c.field-meta.xml
<CustomField>
    <fullName>OfferDateDateOnly__c</fullName>
    <formula>OfferDate__c - (6/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer Date (Date Only)</label>
    <type>Date</type>
</CustomField>