metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/OfferResponseDate__c.field-meta.xml
<CustomField>
    <fullName>OfferResponseDate__c</fullName>
    <description>The date/time the survey was completed.</description>
    <label>Offer Response Date</label>
    <type>DateTime</type>
</CustomField>