metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/OfferResponseDateMinusOne__c.field-meta.xml
<CustomField>
    <fullName>OfferResponseDateMinusOne__c</fullName>
    <description>Used specifically in the Tack Survey list views that contain "This Week" and "Last Week" in the list view name. This formula field is used instead of Offer Response Date in the list views in order to manipulate the date ranges so that the list views can use the standard THIS WEEK and LAST WEEK filter parameters, since Salesforce considers a weekly range Sun to Sat, and Thumbtack uses Mon to Sun.</description>
    <formula>OfferResponseDate__c - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer Response Date (Minus One)</label>
    <type>Date</type>
</CustomField>