metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/OfferResponseDateOnly__c.field-meta.xml
<CustomField>
    <fullName>OfferResponseDateOnly__c</fullName>
    <formula>OfferResponseDate__c - (6/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer Response Date (Date Only)</label>
    <type>Date</type>
</CustomField>