metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/OutcomeExpectations__c.field-meta.xml
<CustomField>
    <fullName>OutcomeExpectations__c</fullName>
    <description>Field to store the response to the MI CSat survey question: The outcome of the issue met my expectations.</description>
    <inlineHelpText>The outcome of the issue met my expectations.</inlineHelpText>
    <label>Outcome Expectations</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>