metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/OutcomeWasFair__c.field-meta.xml
<CustomField>
    <fullName>OutcomeWasFair__c</fullName>
    <description>Field to store the response to the MI Tack Survey question: The outcome was fair to all parties involved.</description>
    <inlineHelpText>The outcome was fair to all parties involved.</inlineHelpText>
    <label>Outcome was Fair</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>