metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/OwnerFirstName__c.field-meta.xml
<CustomField>
    <fullName>OwnerFirstName__c</fullName>
    <description>Formula field that brings over the Survey Response Owner's first name. Used in email templates sent from the Survey Response object.</description>
    <formula>Owner:User.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner First Name</label>
    <type>Text</type>
</CustomField>