metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/OwnerHandleFirstName__c.field-meta.xml
<CustomField>
    <fullName>OwnerHandleFirstName__c</fullName>
    <description>Formula field to display the Tack Survey Owner's Handle Name from their user record; used in email templates.</description>
    <formula>IF(ISBLANK(Owner:User.HandleFirstName__c),Owner:User.FirstName,Owner:User.HandleFirstName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Handle First Name</label>
    <type>Text</type>
</CustomField>