metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/OwnerLastName__c.field-meta.xml
<CustomField>
    <fullName>OwnerLastName__c</fullName>
    <description>Formula field to bring over the Tack Survey Owner's last name; used in merge field URL parameter to survey tool (for data analysis).</description>
    <formula>Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Last Name</label>
    <type>Text</type>
</CustomField>