metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/ProCustomerAdditionalFeedback__c.field-meta.xml
<CustomField>
    <fullName>ProCustomerAdditionalFeedback__c</fullName>
    <description>Open text area for the engagement specialist to enter in any additional feedback provided by the Pro/Customer during the negative Tack Survey review call.</description>
    <inlineHelpText>Additional feedback provided by the Pro/Customer during the negative Tack Survey review call.</inlineHelpText>
    <label>Pro/Customer Additional Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>