metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/Professionalism__c.field-meta.xml
<CustomField>
    <fullName>Professionalism__c</fullName>
    <description>Field to store the response to the MI Tack Survey question: They were professional and communicated clearly.</description>
    <inlineHelpText>They were professional and communicated clearly.</inlineHelpText>
    <label>Professionalism</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>