metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/PSComments__c.field-meta.xml
<CustomField>
    <fullName>PSComments__c</fullName>
    <description>Pro Services Survey Comments</description>
    <label>PS Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>