metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/PSValue__c.field-meta.xml
<CustomField>
    <fullName>PSValue__c</fullName>
    <description>The value assigned to the satisfaction with the Pro Service Agent by the pro/customer</description>
    <label>PS Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>