metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/PSValueImage__c.field-meta.xml
<CustomField>
    <fullName>PSValueImage__c</fullName>
    <description>Images shown in Pro Services Qualtrics Survey</description>
    <formula>CASE(PSValue__c, 
"1", IMAGE( "https://thumbtack--holly--c.cs13.content.force.com/servlet/servlet.ImageServer?id=015W0000000FYqR&amp;oid=00DW00000077FZ3&amp;lastMod=1521148870000","1", 20, 20), 
"2", IMAGE( "https://thumbtack--holly--c.cs13.content.force.com/servlet/servlet.ImageServer?id=015W0000000FYqW&amp;oid=00DW00000077FZ3&amp;lastMod=1521148861000","2", 20, 20), 
"3", IMAGE( "https://thumbtack--holly--c.cs13.content.force.com/servlet/servlet.ImageServer?id=015W0000000FYqb&amp;oid=00DW00000077FZ3&amp;lastMod=1521148852000","3", 20, 20), 
"4", IMAGE( "https://thumbtack--holly--c.cs13.content.force.com/servlet/servlet.ImageServer?id=015W0000000FYqg&amp;oid=00DW00000077FZ3&amp;lastMod=1521148896000","4", 20, 20), 
"5", IMAGE( "https://thumbtack--holly--c.cs13.content.force.com/servlet/servlet.ImageServer?id=015W0000000FYql&amp;oid=00DW00000077FZ3&amp;lastMod=1521148922000","5", 20, 20), 
"NA")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PS Value Image</label>
    <type>Text</type>
</CustomField>