metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/ReasonableAmountofTimetoResolve__c.field-meta.xml
<CustomField>
    <fullName>ReasonableAmountofTimetoResolve__c</fullName>
    <description>Field to store the response to the MI Tack Survey question: It took a reasonable amount of time to handle the issue.</description>
    <inlineHelpText>It took a reasonable amount of time to handle the issue.</inlineHelpText>
    <label>Reasonable Amount of Time to Resolve</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>