metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/ReasonForNegativeTackSurvey__c.field-meta.xml
<CustomField>
    <fullName>ReasonForNegativeTackSurvey__c</fullName>
    <description>Picklist of values to indicate the reason for the negative feedback.</description>
    <label>Reason for Negative Tack Survey</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complaint about Pro/Customer</fullName>
            </value>
            <value>
                <fullName>Customer suggestions</fullName>
            </value>
            <value>
                <fullName>Data advertised</fullName>
            </value>
            <value>
                <fullName>Filtering/Sorting Quotes</fullName>
            </value>
            <value>
                <fullName>Filtering/Sorting Requests</fullName>
            </value>
            <value>
                <fullName>Landing pages/spotlight</fullName>
            </value>
            <value>
                <fullName>Notifications</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payment Mentods</fullName>
            </value>
            <value>
                <fullName>Phone Apps</fullName>
            </value>
            <value>
                <fullName>Polish - Grammar/Spelling/Layout</fullName>
            </value>
            <value>
                <fullName>Positive Feedback</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Profile</fullName>
            </value>
            <value>
                <fullName>Profile credentials (background checks, licenses)</fullName>
            </value>
            <value>
                <fullName>Profile Social Media links</fullName>
            </value>
            <value>
                <fullName>Pro wants feedback from customers</fullName>
            </value>
            <value>
                <fullName>Quality of leads</fullName>
            </value>
            <value>
                <fullName>Quote Flow</fullName>
            </value>
            <value>
                <fullName>Refund/Credit dispute</fullName>
            </value>
            <value>
                <fullName>Requests</fullName>
            </value>
            <value>
                <fullName>Reviews</fullName>
            </value>
            <value>
                <fullName>Site expansion</fullName>
            </value>
            <value>
                <fullName>Suggested Questions</fullName>
            </value>
            <value>
                <fullName>Support/Help Pages</fullName>
            </value>
            <value>
                <fullName>Thumbtack Specialist</fullName>
            </value>
            <value>
                <fullName>Travel Preferences</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>