metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/ReportingManager__c.field-meta.xml
<CustomField>
    <fullName>ReportingManager__c</fullName>
    <description>Formula field to display the users reporting manager.</description>
    <formula>User__r.Manager.FirstName &amp;" "&amp; User__r.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Manager</label>
    <type>Text</type>
</CustomField>