metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/ReportingManagerEmail__c.field-meta.xml
<CustomField>
    <fullName>ReportingManagerEmail__c</fullName>
    <description>Formula field to display the users reporting manager's email.</description>
    <label>Reporting Manager Email</label>
    <type>Email</type>
</CustomField>