metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/ResolutionDetails__c.field-meta.xml
<CustomField>
    <fullName>ResolutionDetails__c</fullName>
    <description>Open text area for the engagement specialist to add details regarding Thumbtack's ability or inability to solve the issue.</description>
    <inlineHelpText>Details regarding Thumbtack's ability or inability to solve the issue.</inlineHelpText>
    <label>Resolution Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>