metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/ResolvedonCallback__c.field-meta.xml
<CustomField>
    <fullName>ResolvedonCallback__c</fullName>
    <description>Picklist field to indicate if the engagement specialist was able to improve the situation from the negative Tack Survey</description>
    <label>Resolved on Callback</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>