metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/ReviewedByDate__c.field-meta.xml
<CustomField>
    <fullName>ReviewedByDate__c</fullName>
    <description>The date the Tack Survey was reviewed by a team member.</description>
    <label>Reviewed By Date</label>
    <type>DateTime</type>
</CustomField>