metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/ReviewMentions__c.field-meta.xml
<CustomField>
    <fullName>ReviewMentions__c</fullName>
    <description>Picklist of values used to further describe the reason for negative Tack Survey.</description>
    <label>Review Mentions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent Driven - Conduct</fullName>
            </value>
            <value>
                <fullName>Agent Driven - Incomplete Information</fullName>
            </value>
            <value>
                <fullName>Agent Driven - Misinformation</fullName>
            </value>
            <value>
                <fullName>Agent Driven - No/Late Follow-up</fullName>
            </value>
            <value>
                <fullName>App Specific - Android</fullName>
            </value>
            <value>
                <fullName>App Specific - iOS</fullName>
            </value>
            <value>
                <fullName>Blank/Not enough info email</fullName>
            </value>
            <value>
                <fullName>Credit refund dispute</fullName>
            </value>
            <value>
                <fullName>Credits versus Points</fullName>
            </value>
            <value>
                <fullName>Customer Driven - Conduct</fullName>
            </value>
            <value>
                <fullName>Customer Driven - Message for Pro</fullName>
            </value>
            <value>
                <fullName>Customer Driven - Negative Review</fullName>
            </value>
            <value>
                <fullName>Customer Driven - No Payment</fullName>
            </value>
            <value>
                <fullName>Customer Driven - No Reply to Pro</fullName>
            </value>
            <value>
                <fullName>Customer Driven - No Response to Request</fullName>
            </value>
            <value>
                <fullName>Customer Driven - Other</fullName>
            </value>
            <value>
                <fullName>Feedback Implementation</fullName>
            </value>
            <value>
                <fullName>Macro - Generic/Unrelated</fullName>
            </value>
            <value>
                <fullName>MI - Investigation/Other</fullName>
            </value>
            <value>
                <fullName>MI - Removal</fullName>
            </value>
            <value>
                <fullName>Mistake</fullName>
            </value>
            <value>
                <fullName>Passive</fullName>
            </value>
            <value>
                <fullName>Product - Bugs</fullName>
            </value>
            <value>
                <fullName>Product - Landing Page</fullName>
            </value>
            <value>
                <fullName>Product - License</fullName>
            </value>
            <value>
                <fullName>Product - Other</fullName>
            </value>
            <value>
                <fullName>Product - Policy (General)</fullName>
            </value>
            <value>
                <fullName>Product - Pricing</fullName>
            </value>
            <value>
                <fullName>Product - Request Form</fullName>
            </value>
            <value>
                <fullName>Product - Review Policy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>