metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/SetProperExpectations__c.field-meta.xml
<CustomField>
    <fullName>SetProperExpectations__c</fullName>
    <description>They set proper expectations and were clear about next steps.</description>
    <inlineHelpText>They set proper expectations and were clear about next steps.</inlineHelpText>
    <label>Set Proper Expectations</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>