metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/SetProperExpectationsComment__c.field-meta.xml
<CustomField>
    <fullName>SetProperExpectationsComment__c</fullName>
    <description>[Agent Name] set clear expectations, comments.</description>
    <inlineHelpText>[Agent Name] set clear expectations, comments.</inlineHelpText>
    <label>Set Proper Expectations Comment</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>