metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/SetupCompletionType__c.field-meta.xml
<CustomField>
    <fullName>SetupCompletionType__c</fullName>
    <label>Setup Completion Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I completed it myself using the Thumbtack app/website</fullName>
            </value>
            <value>
                <fullName>A Thumbtack Support Specialist waled me through the process on the phone</fullName>
            </value>
            <value>
                <fullName>Both of the above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>