metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/SpecialistConnection__c.field-meta.xml
<CustomField>
    <fullName>SpecialistConnection__c</fullName>
    <description>Open text area to allow the engagement specialist to enter comments surrounding the Thumbtack Specialist performance and connection with the Pro/Customer.</description>
    <inlineHelpText>Details of the Thumbtack Specialists performance and connection with the Pro/Customer.</inlineHelpText>
    <label>Specialist Connection</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>