metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/SurveyInfo__c.field-meta.xml
<CustomField>
    <fullName>SurveyInfo__c</fullName>
    <description>This is for the survey details, like the survey name and survey version.</description>
    <label>Survey Info</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>