metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/TackSurveyComments__c.field-meta.xml
<CustomField>
    <fullName>TackSurveyComments__c</fullName>
    <description>Comments left on the free-form section of the Tack Survey</description>
    <inlineHelpText>Comments left on the free-form section of the Tack Survey</inlineHelpText>
    <label>Tack Survey Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>