metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/TackSurveyDelay__c.field-meta.xml
<CustomField>
    <fullName>TackSurveyDelay__c</fullName>
    <label>Tack Survey Delay</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>Manual Override</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>