metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/TackSurveyIcon__c.field-meta.xml
<CustomField>
    <fullName>TackSurveyIcon__c</fullName>
    <formula>CASE(TackSurveyResponse__c, 
"Good", IMAGE("https://thumbtack.my.salesforce.com/resource/1433431612000/CSATGood", "good", 20, 20) , 
"Bad", IMAGE( "https://thumbtack.my.salesforce.com/resource/1433431629000/CSATBad","bad", 20, 20), 
"1", IMAGE( "https://thumbtack.my.salesforce.com/resource/1438378558000/CSAT1","1", 20, 20), 
"2", IMAGE( "https://thumbtack.my.salesforce.com/resource/1438378642000/CSAT2","2", 20, 20), 
"3", IMAGE( "https://thumbtack.my.salesforce.com/resource/1438378691000/CSAT3","3", 20, 20), 
"4", IMAGE( "https://thumbtack.my.salesforce.com/resource/1438378728000/CSAT4","4", 20, 20), 
"5", IMAGE( "https://thumbtack.my.salesforce.com/resource/1438378776000/CSAT5","5", 20, 20), 
"Yes", IMAGE("https://thumbtack.my.salesforce.com/resource/1438378558000/CSAT5", "Yes", 20, 20) , 
"No", IMAGE( "https://thumbtack.my.salesforce.com/resource/1438378776000/CSAT1","No", 20, 20), 
"")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tack Survey Icon</label>
    <type>Text</type>
</CustomField>