metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/TackSurveyOwnerIsActive__c.field-meta.xml
<CustomField>
    <fullName>TackSurveyOwnerIsActive__c</fullName>
    <formula>Owner:User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tack Survey Owner Is Active</label>
    <type>Checkbox</type>
</CustomField>