metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/TackSurveyOwnerName__c.field-meta.xml
<CustomField>
    <fullName>TackSurveyOwnerName__c</fullName>
    <formula>Owner:User.FirstName &amp; " " &amp; Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tack Survey Owner Name</label>
    <type>Text</type>
</CustomField>