metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/TackSurveyResponse__c.field-meta.xml
<CustomField>
    <fullName>TackSurveyResponse__c</fullName>
    <description>Tack Survey Response (Good or Bad - Old Zendesk Style for launch) (1 - 5 Likert scale post-release 2)</description>
    <inlineHelpText>Tack Survey Response</inlineHelpText>
    <label>Tack Survey Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
                <color>#78C953</color>
                <label>Good</label>
            </value>
            <value>
                <fullName>Bad</fullName>
                <color>#FF0000</color>
                <label>Bad</label>
            </value>
            <value>
                <fullName>1</fullName>
                <color>#CC0000</color>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <color>#FF6600</color>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <color>#FFCC33</color>
                <label>3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <color>#33CC00</color>
                <label>4</label>
            </value>
            <value>
                <fullName>5</fullName>
                <color>#009900</color>
                <label>5</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>