metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/TackSurveyReviewTeamComments__c.field-meta.xml
<CustomField>
    <fullName>TackSurveyReviewTeamComments__c</fullName>
    <label>Tack Survey Review Team Comments</label>
    <type>TextArea</type>
</CustomField>