metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/TackSurveyReviewTeamDecision__c.field-meta.xml
<CustomField>
    <fullName>TackSurveyReviewTeamDecision__c</fullName>
    <label>Tack Survey Review Team Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>