metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <description>Text field to indicate the CSAT owner's assigned team. Populated via a process/workflow.</description>
    <label>Team</label>
    <length>50</length>
    <type>Text</type>
</CustomField>