metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/TempIncidentAccount__c.field-meta.xml
<CustomField>
    <fullName>TempIncidentAccount__c</fullName>
    <formula>IF(OR( 
AND(NOT ISBLANK(Case__r.Incident__c), 
NOT ISBLANK(Case__r.Incident__r.ProAccount__c), 
Case__r.Incident__r.ProAccount__r.Id = Case__r.AccountId), 
AND(NOT ISBLANK(Case__r.Incident__c), 
NOT ISBLANK(Case__r.Incident__r.ProID__c), 
Case__r.Incident__r.ProID__c = TEXT(Case__r.Account.usr_user_id__c))), 'Pro match', 
IF(AND(NOT ISBLANK(Case__r.Incident__c), 
NOT ISBLANK(Case__r.Incident__r.CustomerID__c), 
Case__r.Incident__r.CustomerID__c = TEXT(Case__r.Account.usr_user_id__c)), 'Customer match', 
'No match'))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Temp Incident Account</label>
    <type>Text</type>
</CustomField>