metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/ThumbtackUser__c.field-meta.xml
<CustomField>
    <fullName>ThumbtackUser__c</fullName>
    <description>Formula to present non-clickable contact information.</description>
    <formula>IF( 
NOT(ISBLANK( Account__c )),Contact__r.FirstName &amp; " " &amp; Contact__r.LastName &amp; " with " &amp; Contact__r.Account.Name, 
Contact__r.FirstName &amp; " " &amp; Contact__r.LastName 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thumbtack User</label>
    <type>Text</type>
</CustomField>