metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/ThumbtackUserID__c.field-meta.xml
<CustomField>
    <fullName>ThumbtackUserID__c</fullName>
    <description>The Thumbtack User Id of the person who filled out the survey.</description>
    <label>Thumbtack User ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>