metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/ThumbtackUserPhone__c.field-meta.xml
<CustomField>
    <fullName>ThumbtackUserPhone__c</fullName>
    <description>Phone number of the associated contact. Populated via a workflow rule.</description>
    <label>Thumbtack User Phone</label>
    <type>Phone</type>
</CustomField>