metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/ThumbtackValue__c.field-meta.xml
<CustomField>
    <fullName>ThumbtackValue__c</fullName>
    <description>Picklist field to display the Thumbtack values that the specialist could improve on based on the negative CSAT review.</description>
    <inlineHelpText>Thumbtack value that the specialist could improve on based on the negative CSAT review. High-five if no improvement needed (e.g., the bad CSAT was tied to a product issue and not agent performance).</inlineHelpText>
    <label>Thumbtack Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comprehensive</fullName>
            </value>
            <value>
                <fullName>Super-Helpful</fullName>
            </value>
            <value>
                <fullName>Easy</fullName>
            </value>
            <value>
                <fullName>Dependable</fullName>
            </value>
            <value>
                <fullName>Encouraging</fullName>
            </value>
            <value>
                <fullName>High-Five</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>