metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/TookTimetoUnderstandIssue__c.field-meta.xml
<CustomField>
    <fullName>TookTimetoUnderstandIssue__c</fullName>
    <description>Field used to store the response from the MI CSAT survey question: They took the time to understand my issue.</description>
    <label>Took Time to Understand Issue</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>