metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/ToolsandInfoAvailable__c.field-meta.xml
<CustomField>
    <fullName>ToolsandInfoAvailable__c</fullName>
    <description>Field to store the response to the MI CSat survey question: The tools and information were available for me to handle the issue.</description>
    <inlineHelpText>The tools and information were available for me to handle the issue.</inlineHelpText>
    <label>Tools and Info Available</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>