metadata-sfdx/force-app/main/default/objects/TackSurvey__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The User whom this survey response is regarding</description>
    <inlineHelpText>The User whom this survey response is regarding</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TackSurveys</relationshipName>
    <type>Lookup</type>
</CustomField>